# Window
#
# Copyright © 2019-2020 Jeron Aldaron Lau.
# Dual-licensed under either the MIT License or the Boost Software License,
# Version 1.0.  (See accompanying file LICENSE_BSL.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt and accompanying file LICENSE_MIT.txt or
# copy at https://opensource.org/licenses/MIT)

[package]
name = "window"
version = "0.3.1"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "MIT OR BSL-1.0"
description = "Minimal Rust code for creating a window, automatically choosing a backend window manager and graphics API."
documentation = "https://docs.rs/window"
homepage = "https://libcala.github.io/window/"
repository = "https://github.com/libcala/window"
readme = "README.md"
keywords = ["wm", "platform-agnostic", "cross-platform", "manager", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "rendering::engine"]

[badges]
travis-ci = { repository = "libcala/window" }
is-it-maintained-issue-resolution = { repository = "libcala/window" }
is-it-maintained-open-issues = { repository = "libcala/window" }
maintenance = { status = "actively-developed" }

[dependencies]
dl_api = { path = "../dl_api" }
