# Window
# Copyright © 2019-2021 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "window"
version = "0.5.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "Apache-2.0 OR MIT OR BSL-1.0"
description = "Minimal Rust code for creating a window, automatically choosing a backend window manager and graphics API."
documentation = "https://docs.rs/window"
homepage = "https://github.com/libcala/window/blob/main/CHANGELOG.md"
repository = "https://github.com/libcala/window"
readme = "README.md"
keywords = ["wm", "platform-agnostic", "cross-platform", "manager", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "rendering::engine"]

[dependencies]
dl_api = "0.4"
human = "0.2"

[features]
default = []
gpu-debugging = []
