[package]
name = "cube"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
res = { path = "/home/aldaronlau/devel/res" }

[dependencies]
window = { path = "../../" }
png_pong = "0.5"
pix = "0.13"
